# freeglut_test

./: .gitignore  CMakeLists.txt
scripts/: BuildDebug.bat
testApp/: CMakeLists.txt  main.cpp
